--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 description = ""
 authors = ["fursovia <fursov.ia@gmail.com>"]
 
+[tool.poetry.scripts]
+train = 'dpeter.commands.train:app'
+
 [tool.poetry.dependencies]
 python = "^3.6.1"
 allennlp = "==1.1.0"
@@ -16,6 +19,7 @@ dataclasses_json = "^0.5.2"
 tabulate = "^0.8.7"
 pre-commit = "^2.7.1"
 opencv-python = "^4.4.0"
+wandb = "^0.10.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "5.3.1"
