--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pre-commit = "^2.7.1"
 opencv-python = "^4.4.0"
 wandb = "^0.10.7"
 torchvision = "^0.7.0"
+editdistance = "^0.5.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "5.3.1"
