--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ wandb = "^0.10.7"
 torchvision = "^0.7.0"
 editdistance = "^0.5.3"
 ipdb = "^0.13.4"
+tensorflow = "2.3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "5.3.1"
