--- a/presets/tf_models/last_submit/config.json
+++ b/presets/tf_models/last_submit/config.json
@@ -6,7 +6,8 @@
             "preprocessors": [
                 "basic_rotator",
                 "basic_resizer",
-                "null_binarizer"
+                "null_binarizer",
+                "smart_flipper"
             ]
         }
     },
@@ -17,14 +18,7 @@
     "data_dir": "data",
     "postprocessor": {
         "type": "compose",
-        "postprocessors": [
-            {
-                "archive_path": "presets/seq2seq.tar.gz",
-                "beam_size": 3,
-                "type": "seq2seq",
-                "batch_size": 256
-            }
-        ]
+        "postprocessors": []
     },
     "serialization_dir": "logs/133048-0411",
     "training": {
