--- a/presets/tf_models/last_submit/config.json
+++ b/presets/tf_models/last_submit/config.json
@@ -18,14 +18,7 @@
     "data_dir": "data",
     "postprocessor": {
         "type": "compose",
-        "postprocessors": [
-            {
-                "archive_path": "presets/seq2seq.tar.gz",
-                "beam_size": 3,
-                "type": "seq2seq",
-                "batch_size": 256
-            }
-        ]
+        "postprocessors": []
     },
     "serialization_dir": "logs/133048-0411",
     "training": {
